[package]
name = "bibliotek"
version = "0.1.0"
edition = "2024"

[dependencies]
gray_matter = "0.3.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
tera = "1.20.1"
pulldown-cmark = "0.13.3"
walkdir = "2.5.0"
csv = "1.4.0"
axum = "0.8"
tokio = { version = "1", features = ["full"] }
unicode-normalization = "0.1"
chrono = "0.4"
